2014-12-13  jeff  <jeff@jeff-HP-Pavilion-dm4-Notebook-PC>

	* schedule.cc: Fix for bug 1891 - Desk schedule cleans up after itself now.

2014-12-11	Dominik Reichardt <dominus@users.sourceforge.net>
	* cheat_screen.*: Added display of geographic coordinates to the cheat screen.
	  Also begun work on the teleport cheat screen, teleport to dec coords and NPC
	  is working.

2014-11-20	Dominik Reichardt <dominus@users.sourceforge.net>
	* data/exultmsg.txt, shapes/items.h: added the subtitle texts of SI's end scene.
	  No idea how to actually display those when speech is disabled.

2014-11-17	Dominik Reichardt <dominus@users.sourceforge.net>
	* schedule.cc: temporarily fixed bug 1891 - the desk schedule was adding too 
	  many desk items to the NPCs inventory and never cleaned up, which was causing 
	  problems. For now only add 1 item - but maybe desk schedule needs to be 
	  redone similar to lab or waiter schedule (not adding items to the inventory 
	  but creating out of thin air).

2014-08-30	Dominik Reichardt <dominus@users.sourceforge.net>
	* audio/midi_drivers/forked_player.h: disabled forked midi since "using forked 
	  is a very bad idea" (wjp) and people were having crashes due to it. Thanks 
	  to i30817 for the patch. Someone else may remove it completely.
	* audio/midi_drivers/MidiDriver.cpp: moved FMOpl Midi driver to the top of the 
	  list as it should always work right away. Thanks to i30817 for the patch.

2014-07-29	Malignant Manor <malignantmanor@users.sourceforge.net>
	* Makefile.mingw: Remove code from accidental commit.

2014-07-17	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/compiler/ucexpr.cc: Fixed regression in usecode compiler from bug
	  #1879 "Keyring: healing and resurrecting broken".

2014-06-13	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/egg.cc: Fixing bug #1865 "(Anti magic/sparkle) Weather takes too long
	  to change": weather eggs now reset weather when they are deleted, which
	  matches the original's behavior.