@@ -1,3 +1,6 @@
+2014-12-16	Dominik Reichardt <dominus@users.sourceforge.net>
+	* cheat_screen.*: The teleport cheat screen now supports geographic coords.
+
 2014-12-13  jeff  <jeff@jeff-HP-Pavilion-dm4-Notebook-PC>
 
 	* schedule.cc: Fix for bug 1891 - Desk schedule cleans up after itself now.
